@@ -103,16 +103,17 @@ wchar_t * voikko_cstrtoucs4(const char * word, const char * encoding, size_t len
 }
 
 char * voikko_ucs4tocstr(const wchar_t * word, const char * encoding, size_t len) {
+	const size_t OUTPUT_BUFFER_BYTES = LIBVOIKKO_MAX_WORD_CHARS * 6;
 #ifdef HAVE_ICONV
 	iconv_t cd;
 	bool using_temporary_converter = false;
 	size_t conv_bytes;
-	char * utf8_buffer = new char[LIBVOIKKO_MAX_WORD_CHARS * 6 + 1];
+	char * utf8_buffer = new char[OUTPUT_BUFFER_BYTES + 1];
 	char * outptr = utf8_buffer;
 	ICONV_CONST char * inptr = (ICONV_CONST char *) word;
 	size_t inbytesleft;
-	size_t outbytesleft = LIBVOIKKO_MAX_WORD_CHARS;
-	utf8_buffer[LIBVOIKKO_MAX_WORD_CHARS] = '\0';
+	size_t outbytesleft = OUTPUT_BUFFER_BYTES;
+	utf8_buffer[OUTPUT_BUFFER_BYTES] = '\0';
 	
 	if (len == 0) len = wcslen(word);
 	inbytesleft = len * sizeof(wchar_t);
@@ -138,7 +139,7 @@ char * voikko_ucs4tocstr(const wchar_t * word, const char * encoding, size_t len
 	LOG(("inbytesleft = %d\n", (int) inbytesleft));
 	LOG(("outbytesleft = %d\n", (int) outbytesleft));
 	LOG(("inptr = '%s'\n", inptr));
-	if (conv_bytes == (size_t) -1) {
+	if (conv_bytes == (size_t) -1 || inbytesleft > 0) {
 		if (using_temporary_converter) iconv_close(cd);
 		delete[] utf8_buffer;
 		return 0;
@@ -152,7 +153,7 @@ char * voikko_ucs4tocstr(const wchar_t * word, const char * encoding, size_t len
   	if (strcmp(encoding, "UTF-8") == 0) cp = CP_UTF8;
 	else if (strcmp(encoding, "CP850") == 0) cp = 850;
 	else return 0;
-  	size_t buflen = LIBVOIKKO_MAX_WORD_CHARS * 6 + 1;
+  	size_t buflen = OUTPUT_BUFFER_BYTES + 1;
   	char * utf8_buffer = new char[buflen];
   	if (utf8_buffer == 0) return 0;
   	int result = WideCharToMultiByte(cp, 0, word, len ? (int) len : -1, utf8_buffer, buflen - 1, 0, 0);
